style.css
* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    
}

body {
    margin: 0;
}

.background {
    background-color: #6E6E6E;
}

.body-container {
    font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    margin-right: auto;
    margin-left: auto;
    min-height: 100vh;
    max-width: 120vh;
    display: flex;
    flex-flow: column nowrap;
    background-color: #6E6E6E;
}

h1 {
    font-size: 72px;
    margin: 0;
}

h2 {
    font-size: 48px;
    margin-top: 0; 
}


h3 {
    margin: 0;  
}

img {
    max-width:100%;
}

a, a:visited{
    color: inherit;
    text-decoration: none;
}

button {
    padding: 8px 16px;
    border-radius: 8px;
    background-color: #DDD0C8;
    color: #323232;
    text-align: center;
    border: 2px solid #323232;
    font-size: 16px;
    transition: all 0.5s ease-out;  
}

.out-of-service * {
    cursor: not-allowed;
    
}

.header-links {
    display: flex;
    gap: 0.5rem;
    align-items: center;
    justify-content: center;
    margin: 32px;
}

.a-header {
    flex: 1;
    background-color: #323232;
    color: #fff;
    border: 1px solid;
    padding: 2.5rem 1.5rem;
    text-align: center;
    text-decoration: none;
    transition: all 0.5s ease-out;
}

.a-header:hover,
.a-header:focus {
  background-color: #fff;
  color: #323232;
}

.a-header[aria-current="page"] {
    text-decoration: underline solid #ffffff 0.3rem;
    text-underline-offset: 0.5rem;
}

.a-header[aria-current="page"]:hover {
    text-decoration: underline solid #323232 0.3rem;
    text-underline-offset: 0.5rem;
}

.inline-material-icons {
    vertical-align: bottom;
    font-size: 18px !important;
}

ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;

}

ul.quote-list {
    font-size:24px;
    justify-content: space-between;
}

.card img {
    box-shadow: 10px 10px gray;
    margin: 0px 10px 10px 0px; 
}

.card:hover {
    cursor:pointer;
    transform: scale(1.1);
}

.card:active {
    transform: scale(0.9);
}

.hero {
    display: flex;
    flex-flow: column nowrap;
    background-color: #DDD0C8;
    color:  #323232;
    border-bottom: 1px solid #323232;
    
}

.header {
    background-color: #323232;
    color:#ffffff;  
}

.hero-contents, .img-panel-title, .img-panel-main, .quote, .quote-name, .quote-panel-title, .quote-container, .sign-up-panel {
   margin: 32px;
}

.hero-contents {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 32px;  
}

.hero-img {
    max-width: 400px;

}

.hero-text-main {
    margin: 32px 0px;
    font-size: 24px;
}


.header-links {
    font-size: 18px;
    
}

.hero-text-button {
    background-color: #DDD0C8;
    color: #323232;
    text-align: center;
    border: 2px solid #323232;
    font-size: 18px;
    transition: all 0.5s ease-out;  
}

.hero-text-button:hover, .hero-text-button:focus {
    cursor: pointer;
    background-color: #323232;
    color: #fff; 
}

.header-logo {
    font-size: 24px;
    
}

.hero-sample {

    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 50%), 0 6px 20px 0 rgb(0 0 0 / 50%);
}

.main {
    display: flex;
    flex: 1;
    flex-flow: column nowrap;
    background-color: #DDD0C8;
}

#img-panel {
    flex: 1;
    background-color: #DDD0C8;
    text-align: center;
    border-bottom: 1px solid #323232;
    color: #323232;
}

.img-panel-title {
    font-weight: 800;
    font-size: 36px;
    color: #323232;
}

.img-panel-main {
    display: flex;
    justify-content: space-evenly;
    gap: 24px;
    padding-bottom: 32px;
    flex-flow: row wrap;
    margin: auto;
    max-width: 95%;
}

.card {
    max-width: 150px;
}

.card-text {
    margin: 12px 0px;
    font-size: 24px;
}

.quote-panel {
    flex: 1;
    background-color: #DDD0C8;
    padding-bottom: 32px;
    border-bottom: 1px solid #323232;
}

.quote-panel-title {
    font-weight: 800;
    font-size: 36px;
    color: #323232;
    text-align: center;
}

.quote-container {
    display: flex;
    justify-content: center;
    color: #323232;
    font-size: 1em;
    gap: 5vw;

}

.quote-left, .quote-center, .quote-right {
    display: flex;
    text-align: center;
}

.quote-center > .quote-list {
    font-size: 0px;
}

.quote-list {
    flex-direction: column;
    gap: 36px;
    white-space: nowrap;
}

.quote-name {
    text-align: end;
    margin-top: 0px;
}

.sign-up-panel {
    align-self: center;
    background-color: #DDD0C8;
    max-width: 95%;

}

.modal {
    color: #323232;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-evenly;
    align-self: center;
    gap: 32px;
}

.modal-contents {
    display: flex;
    flex-flow: column nowrap;
    row-gap: 8px;
    text-align: center;
}

#modal-button {
    font-size: 18px;
    min-height: 3em;
    min-width: 20%;
    align-self: center;
    cursor: pointer;
}

#modal-button:hover, #modal-button:active {
    background-color: #323232;
    color: #ffffff; 
}


.modal-header {
    font-weight: bold;
    font-size: 36px;
    white-space: nowrap;
}

.modal-text {
    color: #323232;
    font-size: 24px;

}

.copy-link {
    --height: 36px;
    display: flex;
    justify-content: center;
}

.copy-link-input {
    padding: 0 8px;
    font-size: 18px;
    border: 1px solid #323232;
    border-right: none;
    outline: none;
    text-decoration: none;
}

.copy-link-input:hover {
    background: #eeeeee;
}

.copy-link-button {
    flex-shrink: 0;
    width: var(--height);
    height: var(--height);
    display: flex;
    align-items: center;
    justify-content: center;
    background: #dddddd;
    color: #323232;
    outline: none;
    border: 1px solid #323232;
    border-radius: 0px;
    cursor: pointer;
}

.copy-link-button:hover {
    background: #cccccc;
    box-shadow:none;
    transform: none;
}

.main-title {
    text-align: center;
    padding: 2vw;
    border-bottom: 1px solid #323232;
    color: #323232;
}

.about-main {
    display: flex;
    flex: 1;
    flex-flow: row nowrap;
    background-color: #DDD0C8;
}

.about-nav {
    position: relative;
    margin: 0;
    padding: 2vw 0vw;
    flex: 1;  
    align-self: flex-start; 
}

.img-slides {
    display: none;
}

.about-card {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    text-align: center;
    padding-bottom: 2vw;
    transition: all 0.5s ease-out;
    color: #323232;
    margin: auto;
    min-width: 60%;    
}

.about-img {
    align-self: center;
    width: 250px;
    height: 250px;
    object-fit: contain;
}

.dot {   /*dot for underneath slideshow image showing active selection */
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    padding: 16px;
    color: #323232;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

.next {
    right: 10%;
    border-radius: 5%;
}

.prev {
    left: 10%;
    border-radius: 5%;
}
  
/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
    background-color: #323232;
    color: #ffffff;
}

.text-slides {
    color: #323232;
    font-size: 16px;
    line-height: 1.6;
    padding: 1vw;
    max-width: 95%;
    max-height: 60vh;
    overflow-y: auto;
    overflow-x: hidden;
    margin: 2vw;
    margin-left: 0;
    border: 3px solid #323232;
    flex: 1;  
    align-self: flex-start; 
    box-shadow: 8px 4px 8px 4px rgb(0 0 0 / 50%); 
}

.about-card-text {
    color: #323232;
    font-size: 48px;
    margin: 8px;
}

.about-text-img {
    margin-right: 16px;
    margin-top: 6px;
    margin-bottom: 8px;
    max-width: 200px;
    float: left;
    border-radius: 12px;
}

.active {
    background-color: #717171;
}

.fade {
    animation-name: fade;
    animation-duration: 0.5s;
}
  
@keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

.rpsSelection {
    padding: 25px;
    margin: 5px;  
}

.game-screen{
    border: 5px solid #323232;
    border-radius: 15px;
    margin: 32px;
    padding: 32px;
    text-align: center;

}

.scoreKeeper, .rps-container {
    border: 5px solid #323232;
    border-radius: 15px;
    text-align: center;
    padding: 10px;
    margin: 10px;
    align-self: center;
}

#results {
    padding: 15px;
}

.etchasketch-button { 
    padding: 25px;
    margin: 25px;
}

.etchasketch-container {
    display: flex;
    width: 512px;
    height: 512px;
    flex-flow: row wrap;
    border: 5px solid #323232;
    border-radius: 10px;  
    margin: 25px; 
    align-self: center;
    background-color: #ffffff;
}

.etchasketch-main {
    display:flex;
    flex-flow: column nowrap;
    align-items: center;
}

.etchasketch-button-container {
    align-self: center;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #323232;
    color: #ffffff;
    padding: 2em;
    font-size: 12px;
}

/* Tooltip container */
.tooltip {
    position: relative;
    display: inline-block;
    
}
  
/* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: #323232;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
    position: absolute;
    z-index: 1;
    bottom: 105%;
    left: 50%;
    margin-left: -60px;
}
  
.tooltip:hover .tooltiptext {
    visibility: visible;
}

.prevent-select {
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}


@media only screen and (max-width: 768px) {
    /* For mobile */
    .body-container {
      width: 100%;
    }

    .hero > .header {
        width: 100%;
    }

    .header-links > .a-header {
        border: none;
        padding: 5vw 1vw;
        font-size: 16px;
    }

    .header > .header-links {
        gap: 0;
        margin: 0;
        
    }

    h1 {
        font-size: 28px;
        margin: 0;
        font-weight: 600;
    }
    
    h2 {
        margin-top: 0;
        font-size: 22px;
        font-weight: 600;
    }
    
    h3 {
        margin: 0;
        font-size: 18px;
        font-weight: 600;
    }

    ul.quote-list {
        font-size: 16px;
    }

    .footer {
        padding: 1em;
    }

    .hero-text-main {
        font-size: 16px;
    }

    .hero-text {
        text-align: center;
    }

    .about-main {
        flex-flow: column nowrap;
    }

    .about-nav {
        align-self: auto;
        margin-top: 16px;
        border-bottom: 1px solid #323232;
    }

    .text-slides {
        align-self: center;
        border: none;
        box-shadow: none;
        padding: 0;
        margin: 0;
        max-height: none;
    }

    .about-card-text {
        font-size: 22px;
    }

    .about-card {
        width: 80%;
        padding-bottom: 18px;
    }

    .about-img {
        width: 50%;
        height: 150px;
    }

    .hero-text-button, #modal-button {
        font-size: 16px;
    }
}

